examples/test/testpolicy13633.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13633
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key39: value46
      key24: value46
      key9: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value26
          key33: value37
          key48: value29
      podSelector:
        matchLabels:
          key48: value26
